...
            )
        }
    )

    object Followed : BottomNavItem(
        route = followedPlayersNavigationRoute,
        title = "Followed",
        icon = {
            Icon(
                imageVector = Icons.Rounded.Favorite,
                contentDescription = "icon followed"
            )
        }
...
